# backend

./: .env  .env.exemplo  .gitignore  .pdm-python  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
academia/: admin.py  models.py  serializers.py  views.py
academia/migrations/: 0001_initial.py  0002_fornecedor_produtos.py  0002_produtos_capa.py  0003_alter_produtos_options.py  0003_categoria_claudio.py  0004_alter_fornecedor_options_remove_fornecedor_email_and_more.py  0004_remove_produtos_fornecedor_produtos_fornecedor.py  0005_alter_fornecedor_options_alter_fornecedor_nome.py  0005_alter_fornecedor_options_remove_fornecedor_site_and_more.py  0006_rename_capa_produtos_imagem_remove_categoria_claudio_and_more.py  0007_remove_produtos_isbn_produtos_descricao_and_more.py  0008_remove_categoria_imagem.py  0009_categoria_imagem.py  0010_compra.py  0011_itenscompra.py  0012_alter_itenscompra_compra.py  0013_alter_compra_status_alter_compra_usuario.py  0014_rename_titulo_produtos_nome.py  0015_rename_nome_produtos_titulo.py
academia/models/: __init__.py  categoria.py  compra.py  fornecedor.py  produtos.py
academia/serializers/: __init__.py  categoria.py  compra.py  fornecedor.py  produtos.py
academia/views/: __init__.py  categoria.py  compra.py  fornecedor.py  produtos.py
config/: settings.py  urls.py
uploader/: views.py
uploader/migrations/: 0001_initial.py
uploader/models/: document.py  image.py
uploader/serializers/: document.py  image.py
usuario/migrations/: 0001_initial.py
utils/: files.py
